# langchain-ai

./: README.md  pyproject.toml
1_chat_models/: 1_chat_models.py  3_chat_models_alternative_models.py
Langchain-v1/: pyproject.toml
Langchain-v1/1_chat_models/: 2_conversation.py  3_alternative_models.py  4_cnvrsn_with_user.py
Langchain-v1/2.1_structured_output/: concept.md  typedict_strc_op.py
Langchain-v1/2.2_output_parsers/: 0_concept.md  1.1_stroutputparser copy.py  1.2_json_op_parser.py  1.3_structr_op_parser.py  1.4_pydantic_op_parser.py  1._stroutputparser.py
Langchain-v1/2_prompting/: 1_prompt_tmpst.py  concept.md
Langchain-v1/3_chains/: 1_chains_basic.py  2_chain_inner_workings.py  3_chains_sequential.py  4_chains_parallel.py  5_chains_conditional.py  chains.md  concept.md
Langchain-v1/4_rag/: 1_rag_basic_a.py  1_rag_basic_b.py  2_rag_metadata_a.py  2_rag_metadata_b.py  3_rag_off_question.py  rag.md
Langchain-v1/4_rag/db/chroma_db/: chroma.sqlite3
Langchain-v1/5_agents/: 1_basic.py  2_openai_agents.py  3_a_custom_agents.py  3_custom_agents.py
Langchain-v1/6_os_models/: 1_hgface_api.py
Langchain-v1/8_memory/: 1_memory_langchain.py
Langchain-v2/: .env.example  hello.py  pyproject.toml
Langchain-v2/notebooks/v1/: demo_langserve.py  langchain_essential.ipynb
